Attempted Testimonials header overflow on small screen bug fix by setting fot-size property in rems for small screens using media query. Might be better to apply rems to all headers globally rather than use Boostrap Display-4 property

--- a/alternate_styles.css
+++ b/alternate_styles.css
@@ -122,13 +122,7 @@ border-bottom: .1rem solid #E63946;
   }
 
   @media only screen and (max-width: 500px) {
-    .comp-logo {
-      width: 75%;
-      height: auto;
-      margin-left: auto;
-    }
-
-    .nav-pad {
-        height: 60px;
+    .testi-head {
+      font-size: 2.5rem;
     }
 }
